Aplicando CSS no formulário

--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="logo.png"></h1>
+                <h1><img src="logo.png" alt="Logo da barbearia Alura"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -25,19 +25,19 @@
         <main>
             <form>
                 <label for="nomesobrenome">Nome e Sobrenome</label>
-                <input type="text" id="nomesobrenome" class="input-padrao">
+                <input type="text" id="nomesobrenome" class="input-padrao" required>
 
                 <label for="email">Email</label>
-                <input type="email" id="email" class="input-padrao">
+                <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
                 <label for="telefone">Telefone</label>
-                <input type="tel" id="telefone" class="input-padrao">
+                <input type="tel" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
 
                 <label for="mensagem">Mensagem</label>
-                <textarea cols="70" rows="10" id="mensagem"></textarea class="input-padrao">
+                <textarea cols="70" rows="10" id="mensagem"></textarea class="input-padrao" required>
 
-                <div>
-                    <p>Como prefere o nosso ocntato?</p>
+                <fieldset>
+                    <legend>Como prefere o nosso ocntato?</legend>
                     <label for="radio-email">
                         <input type="radio" name="contato" value="email" id="radio-email">
                         Email</label>
@@ -49,27 +49,45 @@
                     
 
                     <label for="radio-whatsapp">
-                        <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                        <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>
                         Whastapp</label>                    
 
-                </div>
+                </fieldset>
 
-                <div>
-                    <p>Qual horário prefere ser atendido</p>
+                <fieldset>
+                    <legend>Qual horário prefere ser atendido</legend>
                     <select>
                         <option>Manhã</option>
                         <option>Tarde</option>
                         <option>Noite</option>
                     </select>
-                </div>
+                </fieldset>
 
-                <label><input type="checkbox" class="checkbox">Gostaria de receber nossas novidades por email?</label>
-                <input type="submit" value="Enviar Formulário">
+                <label><input type="checkbox" class="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
+                <input type="submit" value="Enviar Formulário" class="enviar">
             </form>
+            <table>
+                <tr>
+                    <td>Dia</td>
+                    <td>horário</td>
+                </tr>
+                <tr>
+                    <td>Segunda</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Quarta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Sexta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+            </table>
         </main>
 
         <footer>
-            <img src="logo-branco.png">
+            <img src="logo-branco.png" alt="Logo da barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
         </footer>
     </body>
